--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,9 +1,8 @@
 doctype html
-html class="h-100"
+html class='h-100'
   head
-    title
-      | CollectiveBlog
-    meta[name="viewport" content="width=device-width,initial-scale=1"]
+    title = t('.app_name')
+    meta[name='viewport' content='width=device-width,initial-scale=1']
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
@@ -12,35 +11,21 @@ html class="h-100"
     .container.mb-2
       .d-flex.flex-wrap.align-items-center.py-2.border-bottom
         .navbar.navbar-expand-md.navbar-light.me-auto
-          a.navbar-brand.me-md-4 href="/"
+          a.navbar-brand.me-md-4 href='/'
             = image_tag 'hexlet.png', width: '30', alt: 'Логотип Хекслета'
         ul.nav.nav-pills
-          li.nav-item.me-2
-            a.nav-link.link-dark href="/users/sign_in"  Войти
-          li.nav-item.me-2
-            a.nav-link.link-dark href="/users/sign_up"  Регистрация
+          - if user_signed_in?
+            li.nav-item.me-2
+              p.nav-link.disabled = current_user.email
+            li.nav-item.me-2
+              = link_to 'Add article', '#', class: 'nav-link link-dark'
+            li.nav-item.me-2
+              = link_to t('.sign_out'), destroy_user_session_path, data: { turbo_method: 'delete' }, class: 'nav-link link-dark'
+          - else
+            li.nav-item.me-2
+              = link_to t('.sign_in'), new_user_session_path, class: 'nav-link link-dark'
+            li.nav-item.me-2
+              = link_to t('.sign_up'), new_user_registration_path, class: 'nav-link link-dark'
+
     .container.my-4
-      h1 Коллективный блог
-      .row
-        .col-md-12
-          .card.mb-3
-            .card-body
-              h2.h5.card-title
-                a.link-dark.text-decoration-none href="/posts/298486374"
-                  | 10 самых влиятельных мертвых языков программирования
-              .card-text.mb-2 Эта статья — о мертвых или почти мертвых языках, которые оставили важный след в истории программирования. Это не исчерпывающий список, но он помогает понять, как современные языки программирования ...
-              .text-right.small.text-muted.mt-auto
-                span.me-2 Понравилось: 0
-                span.me-2 около 1 часа
-                span two@email.com
-        .col-md-12
-          .card.mb-3
-            .card-body
-              h2.h5.card-title
-                a.link-dark.text-decoration-none href="/posts/980190962"
-                  | Стоит ли учить JavaScript: перспективы, ситуация на рынке труда, мнения экспертов
-              .card-text.mb-2 JavaScript входит в число самых популярных языков программирования, а фронтенд-разработка считается одним из самых простых способов начать карьеру в IT. В этой статье поговорим о целесообразности и...
-              .text-right.small.text-muted.mt-auto
-                span.me-2 Понравилось: 0
-                span.me-2 около 1 часа
-                span one@email.com
+      = yield
