--- a/app/views/devise/passwords/edit.html.slim
+++ b/app/views/devise/passwords/edit.html.slim
@@ -1,22 +1,19 @@
-h2
-  | Change your password
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
-  = render 'devise/shared/error_messages', resource:
-  = f.hidden_field :reset_password_token
-  .field
-    = f.label :password, 'New password'
-    br
-    - if @minimum_password_length
-      em
-        | (
-        = @minimum_password_length
-        |  characters minimum)
-      br
-    = f.password_field :password, autofocus: true, autocomplete: 'new-password'
-  .field
-    = f.label :password_confirmation, 'Confirm new password'
-    br
-    = f.password_field :password_confirmation, autocomplete: 'new-password'
-  .actions
-    = f.submit 'Change my password'
-= render 'devise/shared/links'
+.row
+  .col-md-6
+    h2.pb-4
+      = t('.change_your_password')
+    = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
+      = render "devise/shared/error_messages", resource: resource
+      = f.hidden_field :reset_password_token
+      .mb-3
+        = f.label :password, t('.new_password'), class: 'form-label'
+        = f.password_field :password, autofocus: true, class: 'form-control'
+        - if @minimum_password_length
+          .form-text
+            = t('devise.shared.minimum_password_length', count: @minimum_password_length)
+      .mb-4
+        = f.label :password_confirmation, t('.confirm_new_password'), class: 'form-label'
+        = f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control'
+      .mb-4
+        = f.submit t('.change_my_password'), class: 'btn btn-primary'
+    = render "devise/shared/links"
