--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,24 +1,23 @@
-h2
-  | Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = render 'devise/shared/error_messages', resource:
-  .field
-    = f.label :email
-    br
-    = f.email_field :email, autofocus: true, autocomplete: 'email'
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      em
-        | (
-        = @minimum_password_length
-        |  characters minimum)
-    br
-    = f.password_field :password, autocomplete: 'new-password'
-  .field
-    = f.label :password_confirmation
-    br
-    = f.password_field :password_confirmation, autocomplete: 'new-password'
-  .actions
-    = f.submit 'Sign up'
-= render 'devise/shared/links'
+.row
+  .col-md-6
+    h2.pb-4
+      = t('.sign_up')
+    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      = render "devise/shared/error_messages", resource: resource
+      .mb-3
+        = f.label :email, class: "form-label"
+        = f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control'
+      .row.mb-4
+
+      .col
+        = f.label :password, class: "form-label"
+        = f.password_field :password, autocomplete: "new-password", class: 'form-control'
+        - if @minimum_password_length
+          .form-text
+            = t('devise.shared.minimum_password_length', count: @minimum_password_length)
+      .col
+        = f.label :password_confirmation, class: "form-label"
+        = f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control'
+      .mb-3
+        = f.submit t('.sign_up'), class: 'btn btn-primary'
+      = render "devise/shared/links"
