--- a/app/views/devise/shared/_error_messages.html.slim
+++ b/app/views/devise/shared/_error_messages.html.slim
@@ -1,10 +1,9 @@
 - if resource.errors.any?
-  #error_explanation
-    h2
-      = I18n.t("errors.messages.not_saved",
-      -                  count: resource.errors.count,
-      -                  resource: resource.class.model_name.human.downcase)
-  ul
+  .alert.alert-danger
+
+  h4.alert-heading
+    = I18n.t("errors.messages.not_saved", count: resource.errors.count, resource: resource.class.model_name.human.downcase)
+  ul.mb-0
     - resource.errors.full_messages.each do |message|
       li
         = message
