--- a/app/views/devise/unlocks/new.html.slim
+++ b/app/views/devise/unlocks/new.html.slim
@@ -1,11 +1,12 @@
-h2
-  | Resend unlock instructions
-= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f|
-  = render 'devise/shared/error_messages', resource:
-  .field
-    = f.label :email
-    br
-    = f.email_field :email, autofocus: true, autocomplete: 'email'
-  .actions
-    = f.submit 'Resend unlock instructions'
-= render 'devise/shared/links'
+.row
+  .col-md-6
+    h2.pb-4
+      = t('.resend_unlock_instructions')
+    = form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f|
+      = render "devise/shared/error_messages", resource: resource
+      .mb-3
+        = f.label :email, class: "form-label"
+        = f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control'
+      .mb-3
+        = f.submit t('.resend_unlock_instructions'), class: 'btn btn-primary'
+    = render "devise/shared/links"
