--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,7 +18,7 @@ html class='h-100'
             li.nav-item.me-2
               p.nav-link.disabled = current_user.email
             li.nav-item.me-2
-              = link_to 'Add article', '#', class: 'nav-link link-dark'
+              = link_to t('.add_post'), new_post_path, class: 'nav-link link-dark'
             li.nav-item.me-2
               = link_to t('.sign_out'), destroy_user_session_path, data: { turbo_method: 'delete' }, class: 'nav-link link-dark'
           - else
@@ -28,4 +28,5 @@ html class='h-100'
               = link_to t('.sign_up'), new_user_registration_path, class: 'nav-link link-dark'
 
     .container.my-4
+      h1 = yield :title
       = yield
