--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,7 +11,7 @@ html class='h-100'
     .container.mb-2
       .d-flex.flex-wrap.align-items-center.py-2.border-bottom
         .navbar.navbar-expand-md.navbar-light.me-auto
-          a.navbar-brand.me-md-4 href='/'
+          = link_to root_path, class: 'navbar-brand.me-md-4'
             = image_tag 'hexlet.png', width: '30', alt: 'Логотип Хекслета'
         ul.nav.nav-pills
           - if user_signed_in?
@@ -28,5 +28,6 @@ html class='h-100'
               = link_to t('.sign_up'), new_user_registration_path, class: 'nav-link link-dark'
 
     .container.my-4
-      h1 = yield :title
+      - if content_for?(:title)
+        h1 = yield :title
       = yield
