--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,24 +1,15 @@
 - content_for :title, t('.title')
 .row
-  .col-md-12
-    .card.mb-3
-      .card-body
-        h2.h5.card-title
-          a.link-dark.text-decoration-none href="/posts/298486374"
-            | 10 самых влиятельных мертвых языков программирования
-        .card-text.mb-2 Эта статья — о мертвых или почти мертвых языках, которые оставили важный след в истории программирования. Это не исчерпывающий список, но он помогает понять, как современные языки программирования ...
-        .text-right.small.text-muted.mt-auto
-          span.me-2 Понравилось: 0
-          span.me-2 около 1 часа
-          span two@email.com
-  .col-md-12
-    .card.mb-3
-      .card-body
-        h2.h5.card-title
-          a.link-dark.text-decoration-none href="/posts/980190962"
-            | Стоит ли учить JavaScript: перспективы, ситуация на рынке труда, мнения экспертов
-        .card-text.mb-2 JavaScript входит в число самых популярных языков программирования, а фронтенд-разработка считается одним из самых простых способов начать карьеру в IT. В этой статье поговорим о целесообразности и...
-        .text-right.small.text-muted.mt-auto
-          span.me-2 Понравилось: 0
-          span.me-2 около 1 часа
-          span one@email.com
+  - @posts.each do |post|
+    .col-md-12
+      .card.mb-3
+        .card-body
+          h2.h5.card-title
+            / a.link-dark.text-decoration-none href="/posts/298486374"
+            = link_to post.title, post, class: 'link-dark text-decoration-none'
+          .card-text.mb-2
+            = post.body
+          .text-right.small.text-muted.mt-auto
+            / span.me-2 Понравилось: 0
+            span.me-2 = distance_of_time_in_words_to_now(post.created_at)
+            span = post.creator.email
