--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,6 +1,6 @@
 ol.breadcrumb
   li.breadcrumb-item
-    = link_to "Все статьи", root_path
+    = link_to t('.all_posts'), root_path
   li.breadcrumb-item.active = @post.category.name
 .row.justify-content-center.mt-4
   article.col-12
