--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,7 +5,7 @@ html class='h-100'
     meta[name='viewport' content='width=device-width,initial-scale=1']
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
+    = stylesheet_link_tag 'application', media: 'all'
     = javascript_importmap_tags
   body.d-flex.flex-column.h-100
     .container.mb-2
@@ -20,7 +20,7 @@ html class='h-100'
             li.nav-item.me-2
               = link_to t('.add_post'), new_post_path, class: 'nav-link link-dark'
             li.nav-item.me-2
-              = link_to t('.sign_out'), destroy_user_session_path, data: { turbo_method: 'delete' }, class: 'nav-link link-dark'
+              = link_to t('.sign_out'), destroy_user_session_path, data: { method: 'delete' }, class: 'nav-link link-dark'
           - else
             li.nav-item.me-2
               = link_to t('.sign_in'), new_user_session_path, class: 'nav-link link-dark'
