add nested comments

--- a/app/views/posts/_children_comments.html.slim
+++ b/app/views/posts/_children_comments.html.slim
@@ -1,5 +1,5 @@
 - comment.children.each do |comment|
-  .card.my-4.ms-4
+  .card.my-4.ms-4.border-end-0.border-bottom-0.rounded-0
     .card-header
       span.me-2
         = comment.creator.email
@@ -9,9 +9,6 @@
       p.card-text = comment.content
     - if user_signed_in?
       .card-footer
-        = simple_form_for @comment, as: :post_comment do |f|
-          = f.input :content, as: :text, label: false
-          = f.association :post, as: :hidden, input_html: { value: @post.id }
-          = f.input :parent_id, as: :hidden, input_html: { value: comment.id }
-          = f.button :submit, class: 'btn-sm btn-primary mt-2'
-    = render 'posts/children_comments', comment: comment if comment.children.any?
+        = render partial: 'comment_form'
+    - if comment.children.any?
+      = render 'posts/children_comments', comment:
