--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -18,15 +18,9 @@ ol.breadcrumb
           /! <i class="far fa-thumbs-up text-secondary"></i> Font Awesome fontawesome.com
 .lead.mt-3#comment-section
   span = t('.comments')
-  - if user_signed_in?
-    = simple_form_for @comment, as: :post_comment do |f|
-      = f.input :content, as: :text, label: false
-      = f.association :post, as: :hidden, input_html: { value: @post.id }
-      = f.input :parent_id, as: :hidden, input_html: { value: nil }
-      = f.button :submit, class: 'btn-primary mt-2'
-
+  = render partial: 'comment_form'
   - @comments.each do |comment|
-    .card.my-4
+    .card.my-4.border-end-0
       .card-header
         span.me-2
           = comment.creator.email
@@ -36,12 +30,8 @@ ol.breadcrumb
         p.card-text = comment.content
       - if user_signed_in?
         .card-footer
-          = simple_form_for @comment, as: :post_comment do |f|
-            = f.input :content, as: :text, label: false
-            = f.association :post, as: :hidden, input_html: { value: @post.id }
-            = f.input :parent_id, as: :hidden, input_html: { value: comment.id }
-            = f.button :submit, class: 'btn-sm btn-primary mt-2'
-    = render "posts/children_comments", comment: comment, post: @post
+          = render partial: 'comment_form'
+      = render 'posts/children_comments', comment:
 / p
 /   a.btn.btn-primary aria-controls="collapseExample" aria-expanded="false" data-bs-toggle="collapse" href="#collapseExample" role="button"
 /     | Link with href
