--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -18,9 +18,14 @@ ol.breadcrumb
           /! <i class="far fa-thumbs-up text-secondary"></i> Font Awesome fontawesome.com
 .lead.mt-3#comment-section
   span = t('.comments')
-  = render partial: 'comment_form'
+  - if user_signed_in?
+    = simple_form_for @comment, as: :post_comment do |f|
+      = f.input :content, as: :text, label: false
+      = f.association :post, as: :hidden, input_html: { value: @post.id }
+      = f.input :parent_id, as: :hidden, input_html: { value: nil }
+      = f.button :submit, class: 'btn-primary mt-2'
   - @comments.each do |comment|
-    .card.my-4.border-end-0
+    .card.mt-2.rounded-0
       .card-header
         span.me-2
           = comment.creator.email
@@ -30,13 +35,5 @@ ol.breadcrumb
         p.card-text = comment.content
       - if user_signed_in?
         .card-footer
-          = render partial: 'comment_form'
+            = render 'posts/comment_form', comment:
       = render 'posts/children_comments', comment:
-/ p
-/   a.btn.btn-primary aria-controls="collapseExample" aria-expanded="false" data-bs-toggle="collapse" href="#collapseExample" role="button"
-/     | Link with href
-/   button.btn.btn-primary aria-controls="collapseExample" aria-expanded="false" data-bs-target="#collapseExample" data-bs-toggle="collapse" type="button"
-/     | Button with data-bs-target
-/ #collapseExample.collapse
-/   .card.card-body
-/     | Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
