--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -25,15 +25,16 @@ ol.breadcrumb
       = f.input :parent_id, as: :hidden, input_html: { value: nil }
       = f.button :submit, class: 'btn-primary mt-2'
   - @comments.each do |comment|
-    .card.mt-2.rounded-0
-      .card-header
+    .card.mt-2.rounded-0 id="comment-#{comment.id}"
+      .card-header.border-0
+        = link_to '#', "#comment-#{comment.id}", class: 'me-2'
         span.me-2
           = comment.creator.email
         span.fs-6.text-muted
           = l(comment.created_at, format: :short)
-      .card-body
+      .card-body.border-0
         p.card-text = comment.content
       - if user_signed_in?
-        .card-footer
+        .card-footer.border-0
             = render 'posts/comment_form', comment:
       = render 'posts/children_comments', comment:
