--- a/app/views/posts/_children_comments.html.slim
+++ b/app/views/posts/_children_comments.html.slim
@@ -1,5 +1,5 @@
-- comment.children.each do |comment|
-  .card.ms-4.border-end-0.border-bottom-0.border-top-1.rounded-0 id="comment-#{comment.id}"
+- comment.children.latest.each do |comment|
+  .card.ms-4.border-end-0.border-bottom-0.border-top-1.rounded-0  id="comment-#{comment.id}"
     .card-header.border-0
       = link_to '#', "#comment-#{comment.id}", class: 'me-2'
       span.me-2
