--- a/app/views/posts/_comment_form.html.slim
+++ b/app/views/posts/_comment_form.html.slim
@@ -7,8 +7,7 @@
                                           bs_toggle: 'collapse' }
 
   .ms-2.collapse id="response_comment-#{comment.id}"
-    = simple_form_for @comment, as: :post_comment do |f|
+    = simple_form_for @comment, url: post_comments_path(@post) do |f|
       = f.input :content, as: :text, label: false
-      = f.association :post, as: :hidden, input_html: { value: @post.id }
       = f.input :parent_id, as: :hidden, input_html: { value: comment.id }
       = f.button :submit, class: 'btn-primary mt-2'
