--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -13,17 +13,16 @@ ol.breadcrumb
       #likes-section
         span.me-2 = @post.likes.count
         - if @user_like
-          = link_to post_like_path(@user_like), class: 'link-dark', data: { method: :delete } do
+          = link_to post_like_path(@post, @user_like), class: 'link-dark', data: { method: :delete } do
             i.bi.bi-hand-thumbs-up-fill
         - else
-          = link_to post_likes_path(post_like: { post_id: @post.id }), class: 'link-dark', data: { method: :post } do
+          = link_to post_likes_path(@post), class: 'link-dark', data: { method: :post } do
             i.bi.bi-hand-thumbs-up
 .lead.mt-3#comment-section
   span = t('.comments')
   - if user_signed_in?
-    = simple_form_for @comment, as: :post_comment do |f|
+    = simple_form_for @comment, url: post_comments_path(@post) do |f|
       = f.input :content, as: :text, label: false
-      = f.association :post, as: :hidden, input_html: { value: @post.id }
       = f.input :parent_id, as: :hidden, input_html: { value: nil }
       = f.button :submit, class: 'btn-primary mt-2'
   - @comments.each do |comment|
