--- a/app/views/posts/_children_comments.html.slim
+++ b/app/views/posts/_children_comments.html.slim
@@ -10,6 +10,6 @@
       p.card-text = comment.content
     .card-footer.border-0
       - if user_signed_in?
-        = render 'posts/comment_form', comment:
+        = render 'posts/comment_form', comment: comment
     - if comment.children.any?
-      = render 'posts/children_comments', comment:
+      = render 'posts/children_comments', comment: comment
