--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -30,7 +30,7 @@ ol.breadcrumb
       .card-header.border-0
         = link_to '#', "#comment-#{comment.id}", class: 'me-2'
         span.me-2
-          = comment.creator.email
+          = comment.user.email
         span.fs-6.text-muted
           = l(comment.created_at, format: :short)
       .card-body.border-0
