--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -1,6 +1,8 @@
 - content_for :title, t('.title')
 = simple_form_for @post do |f|
   = f.input :title
-  = f.association :category, collection: @categories, label_method: :name, value_method: :id, label_html: { class: 'mt-3' }
+  = f.association :category, collection: @categories, label_method: :name,
+                                                      value_method: :id,
+                                                      label_html: { class: 'mt-3' }
   = f.input :body, input_html: { rows: 10 }, label_html: { class: 'mt-3' }
   = f.button :submit, t('.submit'), class: 'btn-primary mt-3'
