--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -11,31 +11,33 @@ ol.breadcrumb
         span.me-2 = @post.creator.email
         span = distance_of_time_in_words_to_now(@post.created_at)
       #likes-section
-        / span.me-2 = @post.likes.count
-        - if @user_like
-          = link_to post_like_path(@post, @user_like), class: 'link-dark', data: { method: :delete } do
+        span.me-2 = @post.likes.count
+        - if !user_signed_in?
+          i.bi.bi-hand-thumbs-up
+        - elsif @user_like
+          = link_to post_like_path(@post, @user_like), class: 'link-dark', data: { turbo_method: :delete } do
             i.bi.bi-hand-thumbs-up-fill
         - else
-          = link_to post_likes_path(@post), class: 'link-dark', data: { method: :post } do
+          = link_to post_likes_path(@post), class: 'link-dark', data: { turbo_method: :post } do
             i.bi.bi-hand-thumbs-up
-/ .lead.mt-3#comment-section
-/   span = t('.comments')
-/   - if user_signed_in?
-/     = simple_form_for @comment, url: post_comments_path(@post) do |f|
-/       = f.input :content, as: :text, label: false
-/       = f.input :parent_id, as: :hidden, input_html: { value: nil }
-/       = f.button :submit, class: 'btn-primary mt-2'
-/   - @comments.each do |comment|
-/     .card.mt-2.rounded-0 id="comment-#{comment.id}"
-/       .card-header.border-0
-/         = link_to '#', "#comment-#{comment.id}", class: 'me-2'
-/         span.me-2
-/           = comment.user.email
-/         span.fs-6.text-muted
-/           = l(comment.created_at, format: :short)
-/       .card-body.border-0
-/         p.card-text = comment.content
-/       - if user_signed_in?
-/         .card-footer.border-0
-/             = render 'posts/comment_form', comment: comment
-/       = render 'posts/children_comments', comment: comment
+.lead.mt-3#comment-section
+  span = t('.comments')
+  - if user_signed_in?
+    = simple_form_for @comment, url: post_comments_path(@post) do |f|
+      = f.input :content, as: :text, label: false
+      = f.input :parent_id, as: :hidden, input_html: { value: nil }
+      = f.button :submit, class: 'btn-primary mt-2'
+  - @comments.each do |comment|
+    .card.mt-2.rounded-0 id="comment-#{comment.id}"
+      .card-header.border-0
+        = link_to '#', "#comment-#{comment.id}", class: 'me-2'
+        span.me-2
+          = comment.user.email
+        span.fs-6.text-muted
+          = l(comment.created_at, format: :short)
+      .card-body.border-0
+        p.card-text = comment.content
+      - if user_signed_in?
+        .card-footer.border-0
+            = render 'posts/comment_form', comment: comment
+      = render 'posts/children_comments', comment: comment
